tests/baselines/reference/moduleAndInterfaceSharingName2.errors.txt
moduleAndInterfaceSharingName2.ts(8,9): error TS2315: Type 'Y' is not generic.


==== moduleAndInterfaceSharingName2.ts (1 errors) ====
    module X {
        export module Y {
            export interface Z { }
        }
        export interface Y { }
    }
    var z: X.Y.Z = null;
    var z2: X.Y<string>;
            ~~~~~~~~~~~
!!! error TS2315: Type 'Y' is not generic.